added getBooks function to Bookcontroller adapted listBooksAction to use getBooks adapted booklist.html.twig for the book object

--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -8,7 +8,7 @@
 
         {% for book in books %}
             <div class="book">
-                {{ book }}
+                {{ book.title }}
             </div>
         {% endfor %}
     </div>
