added simple functional test for BookController removed DefaultControllerTest and DefaultController changed BookRepository.php to use QueryGenerator

--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -6,7 +6,7 @@
         <div>
             <ul>
                 {% for book in books %}
-                    <li>{{ book.title }}</li>
+                    <li>{{ book.getTitle }}</li>
                 {% else %}
                     <li><em> no books found</em>/li>
                 {% endfor %}
