moved validation Folder

--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -8,7 +8,7 @@
                 {% for book in books %}
                     <li>{{ book.getTitle }}</li>
                 {% else %}
-                    <li><em> no books found</em>/li>
+                    <li><em> no books found</em></li>
                 {% endfor %}
             </ul>
         </div>
