new functionality "view a book":   added  route, controller method and twigg template for book_view exception handling to BookRepository   added try-catch block to  findOneById method   added BookRepositoryException class

--- a/app/Resources/views/book/bookCreateForm.html.twig
+++ b/app/Resources/views/book/bookCreateForm.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{{ form_start(form, (app.debug) ? {attr : {'novalidate' : 'novalidate'}}) }}
+{{ form_start(form, (app.debug) ? {attr : {'novalidate' : 'novalidate'}} : {}) }}
     {{ form_errors(form) }}
     {{ form_row(form.title) }}
     {{ form_row(form.author) }}
