--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -4,13 +4,18 @@
     <div id='booklist'>
         <h3>Liste der Bücher:</h3>
         <div>
-            <ul>
+            <table>
+                <tr>
+                    <td>Title</td>
+                    <td>Price</td>
+                </tr>
                 {% for book in books %}
-                    <li>{{ book.getTitle }}</li>
-                {% else %}
-                    <li><em> no books found</em></li>
+                    <tr>
+                        <td><a href ={{ path('book_view', {'id': book.getId}) }}> {{ book.getTitle }}</a></td>
+                        <td>{{ book.getPrice }}</td>
+                    </tr>
                 {% endfor %}
-            </ul>
+            </table>
         </div>
         <div>
             <a href={{ path('book_new') }}>Add a book!</a>
