user can delete all books #4
add route book_delete_all /books/delete-all
add controller action BookController::deleteAllBooksAction
add flash message for successful deletion of all books

--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -33,6 +33,10 @@
         <div>
             <a href="{{ path('book_load_fixtures') }}">Load book fixtures!</a>
         </div>
+        <hr>
+        <div>
+            <a href="{{ path('book_delete_all') }}">Delete all books!</a>
+        </div>
         {% for flash_message in app.session.flashbag.get('info') %}
             <hr>
             <div>
