Integrate MainMenu into views. #24
  We add a menu block to our base.html.twig containing
  the rendering of our main_menu service so that
  our main menu will be available in all our templates.
  We also extend the mainmenu with a few extra childs.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,11 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% block menu %}
+            <div id='mainmenu'>
+                {{ knp_menu_render('main') }}
+            </div>
+        {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
