Link materialize.css in base template
  This will add a link to materialize.css to our base.html.twig and
  sets the class of table in booklist.html.twig to 'table-striped'.

--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -4,7 +4,7 @@
     <div id='booklist'>
         <h3>Liste der Bücher:</h3>
         <div>
-            <table>
+            <table class="table-striped">
                 <tr>
                     <td>Title</td>
                     <td>Price</td>
