--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet"
+                  href="{{ asset('web/css/materialize.css') }}">
+            <link rel="stylesheet"
                   href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
