--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,19 +5,18 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet"
-                  href="{{ asset('web/css/materialize.css') }}">
+                  href="{{ asset('css/materialize.css') }}">
             <link rel="stylesheet"
                   href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
+    <body class="purple lighten-5">
         {% block menu %}
-            <div id='mainmenu'>
-                {{ knp_menu_render('main') }}
-            </div>
         {% endblock %}
-        {% block body %}{% endblock %}
+        {% block body %}
+
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
