--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,11 +11,10 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body class="purple lighten-5">
+    <body class="purple lighten-5 container">
         {% block menu %}
         {% endblock %}
         {% block body %}
-
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
