--- a/app/Resources/views/book/booklist.html.twig
+++ b/app/Resources/views/book/booklist.html.twig
@@ -2,30 +2,28 @@
 
 {% block body %}
     <div class="row">
-        <div class="col s3">
-                  {% set menu = knp_menu_get('sidebar', [], {include_homepage: true}) %}
-                  {{ knp_menu_render('main') }}
-       </div>
-        <div class="col s9">
-            <h3>Liste der Bücher:</h3>
-            <div class="card-panel purple lighten-1">
-                <table class="table-striped table-responsive">
+        <div class="col s12 m4 z-depth-1">
+            Sidebar
+        </div>
+        <div class="col s12 m8 offset-m4 z-depth-1">
+            <h5>Liste der Bücher:</h5>
+
+            <table class="table-striped table-hover table-responsive">
+                <tr>
+                    <td>Title</td>
+                    <td>Price</td>
+                </tr>
+                {% for book in books %}
                     <tr>
-                        <td>Title</td>
-                        <td>Price</td>
+                        <td><a href ={{ path('book_view', {'id': book.getId}) }}> {{ book.getTitle }}</a></td>
+                        <td>{{ book.getPrice }}</td>
                     </tr>
-                    {% for book in books %}
-                        <tr>
-                            <td><a href ={{ path('book_view', {'id': book.getId}) }}> {{ book.getTitle }}</a></td>
-                            <td>{{ book.getPrice }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            </div>
-            <div class="card-panel purple lighten-1">
-                <a href={{ path('book_new') }}>Add a book!</a>
-            </div>
-       </div>
+                {% endfor %}
+            </table>
+        </div>
     </div>
+        {#<div class="card-panel purple lighten-1">#}
+    {#<a href={{ path('book_new') }}>Add a book!</a>#}
+    {#</div>#}
 {% endblock %}
 
