--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,24 +16,33 @@
 
 <body class="purple lighten-5">
 
-            {% block navbar %}
-                {{ include('::navbar.html.twig') }}
-            {% endblock %}
+    {% block navbar %}
+        {{ include('::navbar.html.twig') }}
+    {% endblock %}
 
+    <div class="row">
+        <div class="col s12 m2 l2 z-depth-1">
+            {{ include('::sidenav.html.twig') }}
+        </div>
+        <div class="col s12 m10 l10">
             {% block body %}
             {% endblock %}
+        </div>
+    </div>
+    {% block javascripts %}
+        <script src="{{ asset('js/jquery.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.js') }}"></script>
+        <script src="{{ asset('js/material.js') }}"></script>
+        <script>
+            $(document).ready(function () {
+                $('.collapsible').collapsible({
+                    accordion: false // A setting that changes the collapsible behavior to expandable instead of the default accordion style
+                });
+            });
 
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.js') }}"></script>
-            <script src="{{ asset('js/material.js') }}"></script>
-            <script>
-                //                $(window.document).ready(function () {
-                //                    $.material.init();
-                //                });
-            </script>
-        {% endblock %}
-
+        </script>
+    {% endblock %}
+</div>
 </body>
 </html>
 
