define button in template instead of form class

--- a/app/Resources/views/book/bookCreateForm.html.twig
+++ b/app/Resources/views/book/bookCreateForm.html.twig
@@ -1,15 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="form">
+        {{ form_start(form, (app.debug) ? {attr : {'novalidate' : 'novalidate'}} : {}) }}
 
-{{ form_start(form, (app.debug) ? {attr : {'novalidate' : 'novalidate'}} : {}) }}
+        {{ form_errors(form) }}
+        {{ form_row(form.title) }}
+        {{ form_row(form.author) }}
+        {{ form_row(form.isbn) }}
+        {{ form_row(form.price) }}
+        <input type="submit" value="Create"
+               class="btn btn-default pull-left"/>
 
-    {{ form_errors(form) }}
-    {{ form_row(form.title) }}
-    {{ form_row(form.author) }}
-    {{ form_row(form.isbn) }}
-    {{ form_row(form.price) }}
-{{ form_end(form) }}
+        {{ form_end(form) }}
+    </div>
     <div>
         <a href={{ path('book_list') }}> Back to list! </a>
     </div>
